# alert-rs

./: .dockerignore  .gitignore  API-Documentation.md  Cargo.toml  Dockerfile  FRONTEND-README.md  README.md  alert_fields.toml  config.toml  docker-compose.yml  event.md  start-server.sh
docker-compose/: arroyo-compose.yml  kafka-compose.yml  kafka-compose_0000.yml  postgres-compose.yml
frontend/: iframe-example.html  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  router.js
frontend/src/api/: index.js
frontend/src/views/: AllAlerts.vue  AutoConfig.vue  HostBehavior.vue  InvalidAlert.vue  MaliciousSample.vue  NetworkAttack.vue  ThreatEvent.vue
frontend/src/views/autoconfig/: AssociationModel.vue  ConvergenceRule.vue  CorrelationRule.vue  FilterRule.vue  MergedRule.vue  TagManagement.vue  TagRule.vue
schema/: host_behavior.json  malicious_sample.json  network_attack.json
src/: config.rs  generators.rs  lib.rs  main.rs  models.rs
src/api/: alert_data.rs  alert_fields.rs  alert_tag.rs  auto_publish.rs  dsl_compile.rs  mod.rs  rules.rs  tag_management.rs
src/db/: alert_mapping.rs  alert_tag_mapping.rs  auto_push.rs  converged_alerts.rs  convergence_rules.rs  correlation_rules.rs  filter_rules.rs  mock_converged_alerts.rs  mock_rules.rs  mock_tags.rs  mock_threat_events.rs  mod.rs  raw_alerts.rs  tag_management.rs  tag_rules.rs  threat_event.rs
src/dsl/: grammar.pest  mod.rs  parser.rs  types.rs  validator.rs
src/kafka/: convergence.rs  filtering.rs  mod.rs  tagging.rs
src/models/: host_behavior.rs  malicious_sample.rs  network_attack.rs
