[package]
name = "rust-hello"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "generator"
path = "src/bin/generator.rs"

[dependencies]
# Axum web 框架
axum = "0.7"
# Tokio 异步运行时
tokio = { version = "1", features = ["full"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 时间处理
chrono = "0.4"
# 随机数
rand = "0.8"
# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }
# 命令行参数解析
clap = { version = "4.4", features = ["derive"] }
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
