[package]
name = "rust-hello"
version = "0.1.0"
edition = "2021"

# 运行服务器: cargo run --bin server
# 启动 HTTP 服务器监听告警请求
[[bin]]
name = "server"
path = "src/main.rs"

# 运行生成器: cargo run --bin generator
# 生成模拟告警数据并发送到 Kafka
[[bin]]
name = "generator" 
path = "src/bin/generator.rs"

[dependencies]
# Axum web 框架
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
# Tokio 异步运行时
tokio = { version = "1", features = ["full"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# 随机数
rand = "0.8"
# 命令行参数解析
clap = { version = "4.4", features = ["derive"] }
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# Kafka 生产者
rdkafka = { version = "0.36", features = ["cmake-build"] }
# TOML 配置
toml = "0.8"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# 工具
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
anyhow = "1"
futures = "0.3"
